--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 html, body {
     height: 100%;
-    overflow-x: hidden ! important;
-    overflow-y: auto ! important;
+    overflow: hidden !important;
 }
 
 nav {
