--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,6 +14,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+        <script src="scripts/jstree.min.js"></script>
+
     </head>
     <body>
         {{ content }}
