--- a/css/base.css
+++ b/css/base.css
@@ -100,6 +100,15 @@ a {color:#39B3D7}
 .doc-nav > li.active > a {border-color:#39B3D7; font-weight:700}
 .doc-nav > li > ul {padding-left:20px}
 
+.doc_search {
+  float: right;
+  margin: 0em auto 1em auto;
+  border-radius:4px;
+  border:1px solid silver;
+}
+
+.jstree li > a > .jstree-icon {  display:none !important; } 
+
 /* typeahead */
 .tt-dropdown-menu {
     background-color:#fff; border:1px solid #ccc; width:300px;
